# dprl

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml  setup.py
.github/skills/python-packaging/: SKILL.md
.github/workflows/: python-app.yml
.specify/memory/: constitution.md
configs/: dqn_cartpole.yaml  general_template.yaml  ppo_lunarlander.yaml
docs/: index.md  todo.md
examples/: vpg_cartpole.py  vpg_cartpole_from_saved_model.py  vpg_flappy_bird.py
specs/003-cleanup-assets-folder/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-cleanup-assets-folder/checklists/: requirements.md
specs/005-yaml-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-yaml-config/checklists/: requirements.md
specs/007-tqdm-table-logging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-tqdm-table-logging/contracts/: config_extension.py  training_logger.py
src/dprl/: __init__.py
src/dprl/algorithms/vpg/: __init__.py  config.py  vpg.py  vpg_utils.py
src/dprl/envs/: __init__.py
src/dprl/envs/flappy_bird/: __init__.py  base.py  bird.py  flappy_bird.py  pipe.py  utils.py
src/dprl/envs/snake/: game.py  snake.py
src/dprl/utils/: __init__.py  config.py  experiment_logger.py  metrics_plotter.py  training_logger.py
tests/: __init__.py
tests/unit/: test_base_config.py  test_experiment_logger.py  test_metrics_plotter_cleanup.py  test_training_logger.py  test_vpg_config.py
