[project]
name = "dprl"
version = "0.1.0"
description = "Deep reinforcement learning framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "gymnasium[classic-control]>=0.29.0",
    "pyyaml>=6.0",
    "mkdocs>=1.6.1",
]
