[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dprl"
version = "0.1.0"
description = "Deep reinforcement learning framework"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Lucas Gandara", email = "lucas.gandara@outlook.com"},
]
keywords = ["reinforcement-learning", "deep-learning", "gymnasium", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "gymnasium[classic-control]>=0.29.0",
    "pyyaml>=6.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "plotly>=6.5.2",
    "pandas>=2.3.3",
    "dash>=3.3.0",
    "moviepy>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.6.1",
]

[project.urls]
Homepage = "https://github.com/LucasGandara/dprl"
Repository = "https://github.com/LucasGandara/dprl"
"Bug Tracker" = "https://github.com/LucasGandara/dprl/issues"
Documentation = "https://lucgandara.github.io/dprl/"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dprl*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
dprl = ["py.typed"]
